# Iodicium

./: .gitignore  CMakeLists.txt  Iodicium.toml  README.md  app.rc  lib.iodc  math.iodc  math.iodh  test2.iodc  test_invalid_types.iodc  test_project.iodc  test_types.iodc
cppParse/: CMakeLists.txt
cppParse/include/cppParse/: argument.hpp  help_formatter.hpp  parser.hpp
cppParse/src/: argument.cpp  help_formatter.cpp  parser.cpp
cppToml/: CMakeLists.txt
cppToml/include/cppToml/: ast.hpp  lexer.hpp  parser.hpp  tokens.hpp  value.hpp
cppToml/include/cppToml/types/: TomlArray.hpp  TomlBoolean.hpp  TomlDateTime.hpp  TomlFloat.hpp  TomlInteger.hpp  TomlString.hpp
cppToml/src/: ast.cpp  lexer.cpp  nesting.cpp  parser.cpp  tables.cpp
cppToml/src/types/: TomlArray.cpp  TomlBoolean.cpp  TomlDateTime.cpp  TomlFloat.cpp  TomlInteger.cpp  TomlString.cpp
include/codeparser/: ast.h  expression.h  lexer.h  parser.h  tokenizer.h
include/codeparser/types/: int.h  string.h
include/common/: dialog.h  error.h  exceptions.h  iod_common_export.h  logger.h  opcode.h
include/compiler/: codegen.h  compiler.h  linker.h  semantics.h
include/executable/: iod_executable_export.h  iodl_reader.h  iodl_writer.h  ioe_reader.h  ioe_writer.h
include/vm/: library_loader.h  value.h  vm.h
include/vm/opc/: arithmetic.h  base.h  globals.h  io.h
src/: main.cpp
src/codeparser/: ast.cpp  expression.cpp  lexer.cpp  parser.cpp  tokenizer.cpp
src/codeparser/stmt/: function.cpp
src/codeparser/types/: int.cpp  string.cpp
src/common/: dialog.cpp  logger.cpp
src/compiler/: codegen.cpp  compiler.cpp  linker.cpp  semantics.cpp
src/executable/: iodl_reader.cpp  iodl_writer.cpp  ioe_reader.cpp  ioe_writer.cpp
src/vm/: library_loader.cpp  value.cpp  vm.cpp
src/vm/opc/: arithmetic.cpp  base.cpp  globals.cpp  io.cpp
